# lime

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  flake.nix
bench/: simdram-results.json
crates/bench-script/: Cargo.toml
crates/bench-script/src/: benchmark.rs  db.rs  main.rs  sqlgen.rs  tablegen.rs  utils.rs
crates/generic/: Cargo.toml
crates/generic-def/: Cargo.toml
crates/generic-def/src/: cell.rs  instruction.rs  lib.rs  operand.rs  outputs.rs  patterns.rs  range.rs  set.rs
crates/generic-def/src/func/: and.rs  constant.rs  maj.rs  mod.rs  xor.rs
crates/generic/src/: cost.rs  definitions.rs  lib.rs  test.rs  untyped_ntk.rs  utils.rs
crates/generic/src/compilation/: candidate_selection.rs  mod.rs  optimization.rs  step.rs
crates/generic/src/copy/: constant_mapping.rs  discovery.rs  discovery_constant.rs  graph.rs  mod.rs  placeholder.rs  spilling.rs
crates/generic/src/egraph/: analysis.rs  comp_extraction.rs  lp_extractor.rs  mod.rs  opt_extractor.rs  transform.rs  trimming.rs
crates/generic/src/program/: collection.rs  mod.rs
crates/generic/src/program/state/: candidates.rs  cells.rs  free.rs  mod.rs  program.rs  uses.rs
crates/generic/src/validation/: mod.rs
crates/macros/: Cargo.toml
crates/macros/src/generic/: ast.rs  cells.rs  instructions.rs  mod.rs  operands.rs  outputs.rs
rs/: Cargo.toml
rs/src/: lib.rs  opt_extractor.rs
rs/src/ambit/: compilation.rs  extraction.rs  mod.rs  optimization.rs  program.rs  rows.rs
rs/src/generic/: mod.rs
src/: ambit.h  gp.h  gp_benchmark_main.cpp  main.cpp  utils.cpp  utils.h
