[package]
name = "bench-script"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
strum = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.37.0" , features = ["bundled"]}

[[bin]]
name = "tablegen"
path = "src/tablegen.rs"

[[bin]]
name = "sqlgen"
path = "src/sqlgen.rs"
