[package]
name = "lime-generic"
version = "0.1.0"
edition = "2024"

[dependencies]
lime-macros = { workspace = true }
lime-generic-def = { workspace = true }
eggmock = { workspace = true }
rustc-hash = { workspace = true }
either = { workspace = true }
smallvec = { workspace = true }
ouroboros = { workspace = true }
derive-where = { workspace = true }
derive_more = { workspace = true }
paste = { workspace = true }
itertools = { workspace = true }
blanket = { workspace = true }
petgraph = { workspace = true }
tracing = { workspace = true }
test-log = { workspace = true }
egg = { workspace = true }
pathfinding = { workspace = true }
ordered-float = { workspace = true }
coin_cbc = "0.1.8"

[lints]
workspace = true
